--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -127,18 +127,16 @@ jobs:
       - name: Set Up Homebrew
         uses: Homebrew/actions/setup-homebrew@master
 
+      - name: Install Appium
+        run: |
+          npm i --location=global appium
+          npm i appium-webdriveragent
+          appium driver install xcuitest
+
       - name: Set Up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12.0"
-
-      - name: Install Appium
-        run: |
-          npm i --location=global appium
-          # npm i appium-webdriveragent
-          appium driver install xcuitest
-          cd node_modules
-          ls
 
       - name: Set Up Xcode
         run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
