--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -93,10 +93,10 @@ jobs:
 
   autotests-full-workflow:
     name: iOS Automation Test
-    runs-on: macos-13
+    runs-on: macos-12
     env:
-      F_IOS_MODEL: iPhone 14
-      F_IOS_VERSION: 16.4
+      F_IOS_MODEL: iPhone 8
+      F_IOS_VERSION: 16.2
 
     steps:
       - name: Cancel Previous Runs
@@ -127,14 +127,11 @@ jobs:
       - name: Set Up Homebrew
         uses: Homebrew/actions/setup-homebrew@master
 
-      - name: Install and Run Appium Server
-        uses: moatazeldebsy/appium-server-gitHub-action@V1.0.4
-
-      # - name: Install Appium
-      #   run: |
-      #     npm i --location=global appium
-      #     npm i appium-webdriveragent
-      #     appium driver install xcuitest
+      - name: Install Appium
+        run: |
+          npm i --location=global appium
+          npm i appium-webdriveragent
+          appium driver install xcuitest
 
       - name: Set Up Python
         uses: actions/setup-python@v4
