--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -144,8 +144,8 @@ jobs:
       - name: Verify Xcode Installation
         run: xcodebuild -version -sdk
 
-      - name: Check Available Simulators
-        run: xcrun simctl list devices
+      # - name: Check Available Simulators
+      #   run: xcrun simctl list devices
 
       - name: Checkout Automation Code
         uses: actions/checkout@v4
