--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -7,6 +7,68 @@ on:
   workflow_dispatch:
 
 jobs:
+  lint:
+    name: ⬣ ESLint
+    runs-on: macos-13
+    steps:
+      - name: 🛑 Cancel previous runs
+        uses: styfle/cancel-workflow-action@0.12.0
+
+      - name: ⬇️ Checkout repository
+        uses: actions/checkout@v4
+
+      - name: ⎔ Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.10.4
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v4
+        with:
+          cache: "pnpm"
+          node-version: 18.14.2
+
+      - name: 📥 Download dependencies
+        uses: bahmutov/npm-install@v1
+        with:
+          useLockFile: false
+          install-command: pnpm install
+
+      - name: 🔬 Lint
+        run: pnpm lint
+
+  # typecheck:
+  #   name: ✔️ Robot
+  #   runs-on: macos-13
+  #   # env:
+  #   #   TOKEN: ${{ secrets.PAT }}
+  #   steps:
+  #     - name: 🛑 Cancel previous runs
+  #       uses: styfle/cancel-workflow-action@0.12.0
+
+  #     - name: ⬇️ Checkout repository
+  #       uses: actions/checkout@v4
+
+  #     - name: ⎔ Setup pnpm
+  #       uses: pnpm/action-setup@v2
+  #       with:
+  #         version: 8.10.4
+
+  #     - name: ⎔ Setup node
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         cache: "pnpm"
+  #         node-version: 18.14.2
+
+  #     - name: 📥 Download dependencies
+  #       uses: bahmutov/npm-install@v1
+  #       with:
+  #         useLockFile: false
+  #         install-command: pnpm install
+
+  #     - name: 🔎 Type check
+  #       run: pnpm typecheck
+
   # autotests-first-version:
   #   name: iOS ${{ vars.IOS_FIRST_DEVICE_VERSION }} Automation
   #   runs-on: ${{ vars.IOS_FIRST_VM }}
