--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -30,7 +30,7 @@ jobs:
       - name: 🔬 Lint
         run: |
           robotframework-lint Resources
-          robotframework-lint UITests
+          # robotframework-lint UITests
 
   # typecheck:
   #   name: ✔️ Robot
@@ -148,92 +148,92 @@ jobs:
   #     - name: Workflow Teardown
   #       uses: ./.github/actions/ios/teardown
 
-  autotests-full-workflow:
-    name: iOS Automation Test
-    runs-on: macos-12
-    env:
-      F_IOS_MODEL: iPhone 8
-      F_IOS_VERSION: 16.2
+  # autotests-full-workflow:
+  #   name: iOS Automation Test
+  #   runs-on: macos-12
+  #   env:
+  #     F_IOS_MODEL: iPhone 8
+  #     F_IOS_VERSION: 16.2
 
-    steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.12.0
+  #   steps:
+  #     - name: Cancel Previous Runs
+  #       uses: styfle/cancel-workflow-action@0.12.0
 
-      # - name: 🛠️ Setup Expo # pre-requisite for building the app
-      #   uses: expo/expo-github-action@v8
-      #   with:
-      #     expo-version: latest
-      #     eas-version: latest
-      #     token: ${{ secrets.EXPO_TOKEN }}
+  #     # - name: 🛠️ Setup Expo # pre-requisite for building the app
+  #     #   uses: expo/expo-github-action@v8
+  #     #   with:
+  #     #     expo-version: latest
+  #     #     eas-version: latest
+  #     #     token: ${{ secrets.EXPO_TOKEN }}
 
-      # - name: Checkout Application Code # pre-requisite for building the app
-      #   uses: actions/checkout@v4
-      #   with:
-      #     repository: huynhlan21/test
-      #     ref: build
-      #     path: App
+  #     # - name: Checkout Application Code # pre-requisite for building the app
+  #     #   uses: actions/checkout@v4
+  #     #   with:
+  #     #     repository: huynhlan21/test
+  #     #     ref: build
+  #     #     path: App
 
-      # - name: Build for iOS Similators # to build the app for simulator
-      #   run: |
-      #     cd App
-      #     npm i
-      #     eas build --profile simulator --platform ios
-      #     eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl
-      #     echo "ios-download-build=$(eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl)" >> $GITHUB_ENV
+  #     # - name: Build for iOS Similators # to build the app for simulator
+  #     #   run: |
+  #     #     cd App
+  #     #     npm i
+  #     #     eas build --profile simulator --platform ios
+  #     #     eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl
+  #     #     echo "ios-download-build=$(eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl)" >> $GITHUB_ENV
 
-      # - name: Set Up Homebrew
-      #   uses: Homebrew/actions/setup-homebrew@master
+  #     # - name: Set Up Homebrew
+  #     #   uses: Homebrew/actions/setup-homebrew@master
 
-      - name: Install Appium
-        run: |
-          npm i --location=global appium
-          npm i appium-webdriveragent
-          appium driver install xcuitest
+  #     - name: Install Appium
+  #       run: |
+  #         npm i --location=global appium
+  #         npm i appium-webdriveragent
+  #         appium driver install xcuitest
 
-      - name: Set Up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12.0"
+  #     - name: Set Up Python
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: "3.12.0"
 
-      - name: Set Up Xcode
-        run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
+  #     - name: Set Up Xcode
+  #       run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
 
-      # - name: Verify Xcode Installation
-      #   run: xcodebuild -version -sdk
+  #     # - name: Verify Xcode Installation
+  #     #   run: xcodebuild -version -sdk
 
-      # - name: Check Available Simulators
-      #   run: xcrun simctl list devices
+  #     # - name: Check Available Simulators
+  #     #   run: xcrun simctl list devices
 
-      - name: Checkout Automation Code
-        uses: actions/checkout@v4
+  #     - name: Checkout Automation Code
+  #       uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        run: pip install -r requirements.txt
+  #     - name: Install Dependencies
+  #       run: pip install -r requirements.txt
 
-      - name: Download and Extract iOS Build
-        run: |
-          mkdir -p App
-          wget -O ios_build.tar.gz ${{ vars.IOS_BUILD_URL }}
-          mv ios_build.tar.gz App/
-          cd App
-          tar -xzf ios_build.tar.gz
+  #     - name: Download and Extract iOS Build
+  #       run: |
+  #         mkdir -p App
+  #         wget -O ios_build.tar.gz ${{ vars.IOS_BUILD_URL }}
+  #         mv ios_build.tar.gz App/
+  #         cd App
+  #         tar -xzf ios_build.tar.gz
 
-      - name: Set Up iOS Simulator
-        id: setup-simulator
-        uses: futureware-tech/simulator-action@v3
-        with:
-          model: "${{ env.F_IOS_MODEL }}"
-          os_version: ${{ env.F_IOS_VERSION }}
+  #     - name: Set Up iOS Simulator
+  #       id: setup-simulator
+  #       uses: futureware-tech/simulator-action@v3
+  #       with:
+  #         model: "${{ env.F_IOS_MODEL }}"
+  #         os_version: ${{ env.F_IOS_VERSION }}
 
-      - name: Set Environment Variables for Simulator
-        id: set-env-simulator
-        run: echo "SIMULATOR_UDID=${{ steps.setup-simulator.outputs.udid }}" >> $GITHUB_ENV
+  #     - name: Set Environment Variables for Simulator
+  #       id: set-env-simulator
+  #       run: echo "SIMULATOR_UDID=${{ steps.setup-simulator.outputs.udid }}" >> $GITHUB_ENV
 
-      - name: Execute Automation Tests
-        uses: ./.github/actions/ios/autotests
-        with:
-          ios-model: ${{ env.F_IOS_MODELl }}
-          ios-version: ${{ env.F_IOS_VERSION }}
+  #     - name: Execute Automation Tests
+  #       uses: ./.github/actions/ios/autotests
+  #       with:
+  #         ios-model: ${{ env.F_IOS_MODELl }}
+  #         ios-version: ${{ env.F_IOS_VERSION }}
 
-      - name: Workflow Teardown
-        uses: ./.github/actions/ios/teardown
+  #     - name: Workflow Teardown
+  #       uses: ./.github/actions/ios/teardown
