--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install -r requirements.txt
-          pip install –upgrade robotframework-lint
+          pip install robotframework-lint
 
       - name: 🔬 Lint
         run: |
