eslint and typecheck

--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -7,8 +7,38 @@ on:
   workflow_dispatch:
 
 jobs:
-  # lint:
-  #   name: ⬣ ESLint
+  lint-typecheck:
+    name: ⬣ ESLint & Type check
+    runs-on: macos-13
+    steps:
+      - name: 🛑 Cancel previous runs
+        uses: styfle/cancel-workflow-action@0.12.0
+
+      - name: Set Up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11.0"
+
+      - name: Checkout Automation Code
+        uses: actions/checkout@v4
+
+      - name: Install Dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install pylint
+          pip install mypy
+          pip install robotframework-lint
+
+      - name: 🔬 Lint
+        run: |
+          pylint python_code/*
+          find . -type f -name "*.robot" -exec rflint {} \;
+
+      - name: 🔎 Type check
+        run: mypy python_code/*
+
+  # typecheck:
+  #   name: ✔️ Robot
   #   runs-on: macos-13
   #   steps:
   #     - name: 🛑 Cancel previous runs
@@ -19,40 +49,16 @@ jobs:
   #       with:
   #         python-version: "3.11.0"
 
-  #     - name: Checkout Automation Code
+  #     - name: ⬇️ Checkout repository
   #       uses: actions/checkout@v4
 
   #     - name: Install Dependencies
   #       run: |
   #         pip install -r requirements.txt
-  #         pip install pylint
-  #         pip install robotframework-lint
+  #         pip install mypy
 
-  #     - name: 🔬 Lint
-  #       run: |
-  #         find . -type f -name "*.robot" -exec rflint {} \;
-  #         pylint python_code/*
-
-  typecheck:
-    name: ✔️ Robot
-    runs-on: macos-13
-    steps:
-      - name: 🛑 Cancel previous runs
-        uses: styfle/cancel-workflow-action@0.12.0
-
-      - name: ⬇️ Checkout repository
-        uses: actions/checkout@v4
-
-      - name: ⎔ Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: "8.10.4"
-
-      - name: Install Dependencies
-        run: pip install -r requirements.txt
-
-      - name: 🔎 Type check
-        run: pnpm typecheck
+  #     - name: 🔎 Type check
+  #       run: mypy python_code/*
 
   # autotests-first-version:
   #   name: iOS ${{ vars.IOS_FIRST_DEVICE_VERSION }} Automation
@@ -138,92 +144,92 @@ jobs:
   #     - name: Workflow Teardown
   #       uses: ./.github/actions/ios/teardown
 
-  # autotests-full-workflow:
-  #   name: iOS Automation Test
-  #   runs-on: macos-12
-  #   env:
-  #     F_IOS_MODEL: iPhone 8
-  #     F_IOS_VERSION: 16.2
+  autotests-full-workflow:
+    name: iOS Automation Test
+    runs-on: macos-13
+    env:
+      F_IOS_MODEL: iPhone 14
+      F_IOS_VERSION: 16.4
 
-  #   steps:
-  #     - name: Cancel Previous Runs
-  #       uses: styfle/cancel-workflow-action@0.12.0
+    steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.12.0
 
-  #     # - name: 🛠️ Setup Expo # pre-requisite for building the app
-  #     #   uses: expo/expo-github-action@v8
-  #     #   with:
-  #     #     expo-version: latest
-  #     #     eas-version: latest
-  #     #     token: ${{ secrets.EXPO_TOKEN }}
+      # - name: 🛠️ Setup Expo # pre-requisite for building the app
+      #   uses: expo/expo-github-action@v8
+      #   with:
+      #     expo-version: latest
+      #     eas-version: latest
+      #     token: ${{ secrets.EXPO_TOKEN }}
 
-  #     # - name: Checkout Application Code # pre-requisite for building the app
-  #     #   uses: actions/checkout@v4
-  #     #   with:
-  #     #     repository: huynhlan21/test
-  #     #     ref: build
-  #     #     path: App
+      # - name: Checkout Application Code # pre-requisite for building the app
+      #   uses: actions/checkout@v4
+      #   with:
+      #     repository: huynhlan21/test
+      #     ref: build
+      #     path: App
 
-  #     # - name: Build for iOS Similators # to build the app for simulator
-  #     #   run: |
-  #     #     cd App
-  #     #     npm i
-  #     #     eas build --profile simulator --platform ios
-  #     #     eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl
-  #     #     echo "ios-download-build=$(eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl)" >> $GITHUB_ENV
+      # - name: Build for iOS Similators # to build the app for simulator
+      #   run: |
+      #     cd App
+      #     npm i
+      #     eas build --profile simulator --platform ios
+      #     eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl
+      #     echo "ios-download-build=$(eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl)" >> $GITHUB_ENV
 
-  #     # - name: Set Up Homebrew
-  #     #   uses: Homebrew/actions/setup-homebrew@master
+      # - name: Set Up Homebrew
+      #   uses: Homebrew/actions/setup-homebrew@master
 
-  #     - name: Install Appium
-  #       run: |
-  #         npm i --location=global appium
-  #         npm i appium-webdriveragent
-  #         appium driver install xcuitest
+      - name: Install Appium
+        run: |
+          npm i --location=global appium
+          npm i appium-webdriveragent
+          appium driver install xcuitest
 
-  #     - name: Set Up Python
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: "3.12.0"
+      - name: Set Up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12.0"
 
-  #     - name: Set Up Xcode
-  #       run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
+      - name: Set Up Xcode
+        run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
 
-  #     # - name: Verify Xcode Installation
-  #     #   run: xcodebuild -version -sdk
+      # - name: Verify Xcode Installation
+      #   run: xcodebuild -version -sdk
 
-  #     # - name: Check Available Simulators
-  #     #   run: xcrun simctl list devices
+      # - name: Check Available Simulators
+      #   run: xcrun simctl list devices
 
-  #     - name: Checkout Automation Code
-  #       uses: actions/checkout@v4
+      - name: Checkout Automation Code
+        uses: actions/checkout@v4
 
-  #     - name: Install Dependencies
-  #       run: pip install -r requirements.txt
+      - name: Install Dependencies
+        run: pip install -r requirements.txt
 
-  #     - name: Download and Extract iOS Build
-  #       run: |
-  #         mkdir -p App
-  #         wget -O ios_build.tar.gz ${{ vars.IOS_BUILD_URL }}
-  #         mv ios_build.tar.gz App/
-  #         cd App
-  #         tar -xzf ios_build.tar.gz
+      - name: Download and Extract iOS Build
+        run: |
+          mkdir -p App
+          wget -O ios_build.tar.gz ${{ vars.IOS_BUILD_URL }}
+          mv ios_build.tar.gz App/
+          cd App
+          tar -xzf ios_build.tar.gz
 
-  #     - name: Set Up iOS Simulator
-  #       id: setup-simulator
-  #       uses: futureware-tech/simulator-action@v3
-  #       with:
-  #         model: "${{ env.F_IOS_MODEL }}"
-  #         os_version: ${{ env.F_IOS_VERSION }}
+      - name: Set Up iOS Simulator
+        id: setup-simulator
+        uses: futureware-tech/simulator-action@v3
+        with:
+          model: "${{ env.F_IOS_MODEL }}"
+          os_version: ${{ env.F_IOS_VERSION }}
 
-  #     - name: Set Environment Variables for Simulator
-  #       id: set-env-simulator
-  #       run: echo "SIMULATOR_UDID=${{ steps.setup-simulator.outputs.udid }}" >> $GITHUB_ENV
+      - name: Set Environment Variables for Simulator
+        id: set-env-simulator
+        run: echo "SIMULATOR_UDID=${{ steps.setup-simulator.outputs.udid }}" >> $GITHUB_ENV
 
-  #     - name: Execute Automation Tests
-  #       uses: ./.github/actions/ios/autotests
-  #       with:
-  #         ios-model: ${{ env.F_IOS_MODELl }}
-  #         ios-version: ${{ env.F_IOS_VERSION }}
+      - name: Execute Automation Tests
+        uses: ./.github/actions/ios/autotests
+        with:
+          ios-model: ${{ env.F_IOS_MODELl }}
+          ios-version: ${{ env.F_IOS_VERSION }}
 
-  #     - name: Workflow Teardown
-  #       uses: ./.github/actions/ios/teardown
+      - name: Workflow Teardown
+        uses: ./.github/actions/ios/teardown
