check appium-webdriveragent

--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -162,6 +162,7 @@ jobs:
           npm i --location=global appium
           npm i appium-webdriveragent
           appium driver install xcuitest
+          cd ./node_modules/appium-webdriveragent
           ls -R
 
       - name: Set Up Python
