--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -157,20 +157,29 @@ jobs:
       - name: Set Up Homebrew
         uses: Homebrew/actions/setup-homebrew@master
 
+      - name: Set Up Xcode
+        run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
+
       - name: Install Appium
         run: |
           npm i --location=global appium
           appium driver install xcuitest
           npm i appium-webdriveragent
-          ls -R
 
       - name: Set Up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12.0"
 
-      - name: Set Up Xcode
-        run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
+      - name: Build WebDriverAgent
+        run: |
+          cd ./node_modules/appium-webdriveragent
+          xcodebuild -project WebDriverAgent.xcodeproj -scheme WebDriverAgentRunner -destination 'platform=iOS Simulator,OS=17.0,name=iPhone 14' build
+
+      - name: Test WebDriverAgent on Simulator
+        run: |
+          cd ./node_modules/appium-webdriveragent
+          xcodebuild -project WebDriverAgent.xcodeproj -scheme WebDriverAgentRunner -destination 'platform=iOS Simulator,OS=17.0,name=iPhone 14' test
 
       # - name: Verify Xcode Installation
       #   run: xcodebuild -version -sdk
