--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -172,12 +172,12 @@ jobs:
           python-version: "3.12.0"
 
       - name: Import Signing Certificate
-        run: echo ${{ secret.APPLE_CERTIFICATE }} | base64 --decode > certificate.p12
+        run: echo ${{ secrets.APPLE_CERTIFICATE }} | base64 --decode > certificate.p12
 
       - name: Set up Keychain
         run: |
           security create-keychain -p mysecretpassword build.keychain
-          security import certificate.p12 -k ~/Library/Keychains/build.keychain -P ${{ secret.APPLE_CERTIFICATE_PASSWORD }} -T /usr/bin/codesign
+          security import certificate.p12 -k ~/Library/Keychains/build.keychain -P ${{ secrets.APPLE_CERTIFICATE_PASSWORD }} -T /usr/bin/codesign
           security set-keychain-settings -lut 7200 build.keychain
           security unlock-keychain -p mysecretpassword build.keychain
           security set-key-partition-list -S apple-tool:,apple: -s -k mysecretpassword build.keychain
