--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -172,7 +172,9 @@ jobs:
           python-version: "3.12.0"
 
       - name: Import Signing Certificate
-        run: echo ${{ secrets.APPLE_CERTIFICATE }} | base64 --decode > certificate.p12
+        run: |
+          ls
+          echo ${{ secrets.APPLE_CERTIFICATE }} | base64 --decode > certificate.p12
 
       - name: Set up Keychain
         run: |
