--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -166,26 +166,26 @@ jobs:
       - name: Import Signing Certificate
         run: echo "${{ secrets.APPLE_CERTIFICATE }}" | tr -d '\n' | base64 -D > certificate.p12
 
-      - name: Check Keychain List
-        run: security list-keychains
+      # - name: Check Keychain List
+      #   run: security list-keychains
 
-      - name: Set Keychain Settings
-        run: security set-keychain-settings -lut 7200 login.keychain-db
+      # - name: Set Keychain Settings
+      #   run: security set-keychain-settings -lut 7200 login.keychain-db
 
-      - name: Unlock Keychain
-        run: security unlock-keychain -p mysecretpassword login.keychain-db
+      # - name: Unlock Keychain
+      #   run: security unlock-keychain -p mysecretpassword login.keychain-db
 
-      - name: Set Keychain Partition List
-        run: |
-          security set-key-partition-list -S apple-tool:,apple: -s -k mysecretpassword login.keychain-db
+      # - name: Set Keychain Partition List
+      #   run: |
+      #     security set-key-partition-list -S apple-tool:,apple: -s -k mysecretpassword login.keychain-db
 
       - name: Set up Keychain
         run: |
-          security create-keychain -p mysecretpassword login.keychain-db
+          security create-keychain -p ${{ secrets.APPLE_CERTIFICATE_PASSWORD }} login.keychain-db
           security import certificate.p12 -k ~/Library/Keychains/login.keychain-db -P ${{ secrets.APPLE_CERTIFICATE_PASSWORD }} -T /usr/bin/codesign
           # security set-keychain-settings -lut 7200 login.keychain-db
-          # security unlock-keychain -p mysecretpassword login.keychain-db
-          # security set-key-partition-list -S apple-tool:,apple: -s -k mysecretpassword build.keychain
+          # security unlock-keychain -p ${{ secrets.APPLE_CERTIFICATE_PASSWORD }} login.keychain-db
+          # security set-key-partition-list -S apple-tool:,apple: -s -k ${{ secrets.APPLE_CERTIFICATE_PASSWORD }} build.keychain
 
       - name: Install Appium
         run: |
